--- a/package.json
+++ b/package.json
@@ -11,33 +11,15 @@
     "test": "test"
   },
   "dependencies": {
-    "async": "^1.5.0",
-    "atomic-form": "^0.1.4",
-    "babel": "5.8.21",
-    "babel-core": "^5.8.34",
-    "babel-runtime": "^5.6.20",
-    "classnames": "^2.1.3",
-    "css-loader": "^0.23.0",
-    "flux": "^2.1.1",
-    "fs": "0.0.2",
-    "jasmine-core": "^2.3.4",
-    "leaflet": "^0.7.7",
     "lodash": "^3.10.1",
-    "object-assign": "^4.0.1",
-    "path": "^0.12.7",
+    "mapbox-gl": "^0.12.2",
     "react": "^0.14.3",
     "react-addons-update": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-google-maps": "^4.7.0",
     "react-hot-loader": "^1.2.8",
-    "react-mapboxmap": "0.0.3",
     "react-rethinkdb": "^0.5.1",
-    "react-router": "^1.0.0-rc1",
-    "rethinkdb-websocket-server": "^0.3.2",
-    "style-loader": "^0.13.0",
-    "superagent": "^1.3.0",
-    "validator": "^4.0.5",
-    "websocket": "^1.0.21"
+    "react-router": "^1.0.0-rc1"
   },
   "scripts": {
     "test": "karma start",
@@ -48,26 +30,20 @@
   "author": "Jaden",
   "license": "MIT",
   "devDependencies": {
+    "path": "^0.12.7",
     "async": "^1.4.2",
     "autoprefixer-loader": "^3.1.0",
-    "babel-core": "^5.6.20",
+    "babel-core": "^5.8.34",
     "babel-loader": "^5.4.0",
     "chunk-manifest-webpack-plugin": "0.0.1",
-    "karma": "^0.13.3",
-    "karma-chrome-launcher": "^0.2.0",
-    "karma-cli": "0.0.4",
-    "karma-coverage": "^0.3.1",
-    "karma-firefox-launcher": "^0.1.4",
-    "karma-jasmine": "^0.3.6",
-    "karma-jasmine-ajax": "^0.1.12",
-    "karma-jasmine-jquery": "^0.1.1",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-sourcemap-loader": "^0.3.4",
-    "karma-spec-reporter": "0.0.19",
-    "karma-webpack": "^1.7.0",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.2",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.10.1"
+    "webpack-dev-server": "^1.10.1",
+    "babel": "5.8.21",
+    "babel-runtime": "^5.6.20",
+    "css-loader": "^0.23.0",
+    "json-loader": "^0.5.4",
+    "style-loader": "^0.13.0"
   }
 }
